--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/moment": "^2.13.0",
     "@types/node": "^14.0.26",
+    "commander": "^6.0.0",
     "moment": "^2.27.0",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
