--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "moment": "^2.27.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.4",
+    "jest": "^29.6.4",
+    "ts-jest": "^29.1.1"
   }
 }
