--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "build": "node ./scripts/build.js"
   },
   "dependencies": {
-    "@types/moment": "^2.13.0",
     "@types/node": "^18.0.0",
     "commander": "^11.0.0",
+    "dayjs": "^1.11.9",
     "esbuild": "^0.19.0",
-    "moment": "^2.27.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0"
   },
