--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,19 +1,20 @@
 name: Unit Test
-run-name: Unit Test used test
 on: [push]
+
 jobs:
-  uns-on: ubuntu-latest
-  steps:
-    - uses: actions/checkout@v3
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
 
-    - name: Set up Node
-      uses: actions/setup-node@v3
-      with:
-        node-version: "16"
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16"
 
-    - name: Install dependencies
-      run: yarn
+      - name: Install dependencies
+        run: yarn
 
-    - name: Run tests
-      run: |
-        yarn jest
+      - name: Run tests
+        run: |
+          yarn jest
